[package]
name = "blethrs"
version = "0.1.2"
authors = ["Adam Greig <adam@adamgreig.com>"]

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.1"
panic-halt = "0.2.0"
byteorder = { version = "1.2.6", default-features = false }

[dependencies.smoltcp]
version = "0.5.0"
default-features = false
features = ["proto-ipv4", "socket-tcp"]

[dependencies.stm32f4]
version = "0.4.0"
features = ["stm32f407", "rt"]

[build-dependencies]
built = "0.3.0"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
codegen-units = 1
incremental = false
