[package]
name = "blethrs"
version = "0.1.3"
authors = ["Adam Greig <adam@adamgreig.com>"]

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
ufmt = "0.1.0"

[dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["proto-ipv4", "socket-tcp", "ethernet"]

[dependencies.stm32f4]
version = "0.10.0"
features = ["stm32f407", "rt"]

[build-dependencies]
built = { version = "0.4.0", features = ["git2", "chrono"] }

[profile.release]
debug = true
lto = true
codegen-units = 1
incremental = false
opt-level = "s"
