[package]
name = "blethrs-bin"
version = "0.1.3"
authors = ["Adam Greig <adam@adamgreig.com>"]

[dependencies]
blethrs = { path = "../blethrs" }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
stm32f4xx-hal = { version = "0.8.3", features = ["stm32f407", "rt"] }

[dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["proto-ipv4", "socket-tcp", "ethernet"]

[build-dependencies]
built = { version = "0.4.0", features = ["git2", "chrono"] }
